feat: Добавление фильтрации в видах (тип существа)