@@ -1,5 +1,6 @@
 package club.ttg.dnd5.domain.species.service;
 
+import club.ttg.dnd5.domain.filter.model.SearchBody;
 import club.ttg.dnd5.domain.source.service.SourceService;
 import club.ttg.dnd5.domain.species.model.Species;
 import club.ttg.dnd5.domain.species.repository.SpeciesRepository;
@@ -10,10 +11,9 @@ import club.ttg.dnd5.domain.species.rest.mapper.SpeciesMapper;
 import club.ttg.dnd5.exception.ApiException;
 import club.ttg.dnd5.exception.EntityExistException;
 import club.ttg.dnd5.exception.EntityNotFoundException;
-import club.ttg.dnd5.util.SwitchLayoutUtils;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,13 +23,17 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SpeciesService {
     private final SpeciesRepository speciesRepository;
     private final SourceService sourceService;
+    private final SpeciesQueryDslSearchService speciesQueryDslSearchService;
     private final SpeciesMapper speciesMapper;
+
+    private final ObjectMapper objectMapper;
 
     public boolean exists(String url) {
         return speciesRepository.existsById(url);
@@ -60,17 +64,17 @@ public class SpeciesService {
                 .toList();
     }
 
-    public List<SpeciesShortResponse> getSpecies(String searchLine, String[] sort) {
-        Collection<Species> specieses;
-        if (StringUtils.hasText(searchLine)) {
-            String invertedSearchLine = SwitchLayoutUtils.switchLayout(searchLine);
-            specieses =  speciesRepository.findAllSearch(searchLine, invertedSearchLine, Sort.by(sort));
-        } else {
-            specieses = speciesRepository.findAllByParentIsNull(Sort.by(sort));
-        }
-        return specieses.stream()
+    public List<SpeciesShortResponse> search(String searchLine, String filters) {
+        SearchBody searchBody = SearchBody.parse(filters, objectMapper);
+        return search(searchLine, searchBody);
+    }
+
+    public List<SpeciesShortResponse> search(String searchLine, SearchBody searchBody) {
+        return speciesQueryDslSearchService.search(searchLine, searchBody)
+                .stream()
+                .filter(s -> (searchLine != null && !searchLine.isEmpty()) || s.getParent() == null)
                 .map(speciesMapper::toShort)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
